--- a/index.html
+++ b/index.html
@@ -42,9 +42,6 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarCollapse">
         <ul class="navbar-nav ulList ml-auto">
-          <li class="nav-item ">
-            <a class="nav-link" href='#' >About Me</a>
-          </li>
           <li class="nav-item">
             <a class="nav-link" href='#experience'>Experience</a>
           </li>
@@ -79,19 +76,19 @@
           <div class="carousel-item active">
             <img src="/images/first-slide.jpg" class="d-block w-100" alt="coding symbol">
             <div class="carousel-caption d-none d-md-block">
-              <h1 class="animated fadeInLeft">Front-end Web developer</h1>
+              <h1 class="animated bounceInRight">Front-end Web developer</h1>
             </div>
           </div>
           <div class="carousel-item">
             <img src="/images/second-slide.jpg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
-              <h1>Back-end web developer</h1>
+              <h1 class="animated flipInY">Back-end web developer</h1>
             </div>
           </div>
           <div class="carousel-item">
             <img src="/images/third-slide.jpg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
-              <h1>Full-stack web developer</h1>
+              <h1 class="animated flipInX">Full-stack web developer</h1>
             </div>
           </div>
         </div>
