--- a/index.html
+++ b/index.html
@@ -181,17 +181,17 @@
       <div class="row no-padding">
         <div class="col-sm-4">
           <div class="portfolio">
-            <img src="/images/htm5&css3-project.png">
+            <a href="https://travel-tourism-agency.netlify.com" target="_blank"><img src="/images/htm5&css3-project.png"></a>
           </div>
         </div>
         <div class="col-sm-4">
           <div class="portfolio">
-            <img src="/images/react-project.png">
+            <a href="https://hotel-cyf.netlify.com/" target="_blank"><img src="/images/react-project.png"></a>
           </div>
         </div>
         <div class="col-sm-4">
           <div class="portfolio">
-            <img src="/images/nodejs-express-project.png">
+            <a href="https://blogpost-website.netlify.com" target="_blank"><img src="/images/nodejs-express-project.png"></a>
           </div>
         </div>
       </div>
