fixed the blog post link

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
         </div>
         <div class="col-sm-4">
           <div class="portfolio">
-            <a href="https://blogpost-website.netlify.com" target="_blank"><img src="/images/nodejs-express-project.png"></a>
+            <a href="https://abdoulrazack-app.herokuapp.com/" target="_blank"><img src="/images/nodejs-express-project.png"></a>
           </div>
         </div>
       </div>
